<resources>
    <string name="app_name">QuizApp</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="retake_quiz">Retake Quiz</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
</resources>
