<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_a" />

        <RadioButton
            android:id="@+id/radio_button_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_b" />

        <RadioButton
            android:id="@+id/radio_button_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_c" />

        <RadioButton
            android:id="@+id/radio_button_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_d" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
</LinearLayout>
